Tab added an nav links animated

--- a/index.html
+++ b/index.html
@@ -5,7 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Axell Solis</title>
+    <script
+      src="https://kit.fontawesome.com/50ac324aff.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="tab-container">
+      <div class="tab">
+        <div class="tab__button"></div>
+        <div class="tab__button"></div>
+        <div class="tab__button"></div>
+      </div>
+    </div>
+    <div class="container">
+      <header class="header">
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#">
+                <span class="code-brackets"><</span>
+                About
+                <span class="code-brackets --close"> /> </span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">
+                <span class="code-brackets"><</span>
+                Projects
+                <span class="code-brackets --close"> /> </span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">
+                <span class="code-brackets"><</span>
+                Contact
+                <span class="code-brackets --close"> /> </span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+    <main>
+      <div class="container">
+        <section class="hero">
+          <h1>Hi!, I axel solis</h1>
+          <p>a web developer</p>
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
