Adedd footer section

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       </div>
       <div class="container">
         <header class="header">
-          <nav class="nav">
+          <nav class="nav" id="navbar">
             <ul class="nav__list">
               <li class="nav__item">
-                <a class="nav__link" href="#about">
+                <a class="nav__link" href="#welcome-section">
                   <span class="code-brackets"><</span>
                   About
                   <span class="code-brackets --close"> /> </span>
@@ -52,7 +52,7 @@
     </div>
     <main>
       <div class="container">
-        <section id="about" class="hero">
+        <section id="welcome-section" class="hero">
           <h1 class="hero__title title">
             Hi!, I am axell solis<span class="cursor">|</span>
           </h1>
@@ -65,7 +65,7 @@
             Some of my projects<span class="cursor">|</span>
           </h2>
           <div class="projects__grid">
-            <div class="projects__item">
+            <div class="projects__item project-tile">
               <h3 class="projects__item-title">VoxellRoom2552</h3>
               <img
                 class="projects__img"
@@ -129,6 +129,7 @@
           <h3 class="title">Let's work together</h3>
           <div class="contact__links">
             <a
+              id="profile-link"
               class="contact__link btn"
               href="https://github.com/ASDaxsorb"
               target="_blank"
@@ -151,5 +152,8 @@
         </section>
       </div>
     </main>
+    <footer class="footer">
+      <p class="copy">&copy; Axell Solis 2021</p>
+    </footer>
   </body>
 </html>
