--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       src="https://kit.fontawesome.com/50ac324aff.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
+    <script defer src="src/js/main.js"></script>
   </head>
   <body>
     <div class="header-container">
