--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
     <script defer src="src/js/main.js"></script>
   </head>
   <body>
+    <button class="side-menu-button" id="menu-button">
+      <i class="fas fa-bars"></i>
+    </button>
+    <nav class="side-menu collapsed" id="side-menu">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a class="nav__link" href="#welcome-section">
+            <span class="code-brackets"><</span>
+            About
+            <span class="code-brackets --close"> /> </span>
+          </a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="#projects">
+            <span class="code-brackets"><</span>
+            Projects
+            <span class="code-brackets --close"> /> </span>
+          </a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="#contact">
+            <span class="code-brackets"><</span>
+            Contact
+            <span class="code-brackets --close"> /> </span>
+          </a>
+        </li>
+      </ul>
+    </nav>
     <div class="header-container">
       <div class="tab-container">
         <div class="tab">
