--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Axell Solis</title>
     <script
-      src="https://kit.fontawesome.com/50ac324aff.js"
+      src="https://kit.fontawesome.com/7a2aefccc4.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/css/style.css" />
@@ -105,8 +105,10 @@
                 class="btn"
                 href="https://asdaxsorb.github.io/VoxelRoom2552/"
                 target="_blank"
-                >VIEW PAGE</a
               >
+                <i class="fa-regular fa-eye"></i>
+                Go!
+              </a>
             </div>
             <div class="projects__item">
               <h3 class="projects__item-title">CodeLearning</h3>
@@ -119,7 +121,9 @@
                 class="btn"
                 href="https://asdaxsorb.github.io/CodeLearning/"
                 target="_blank"
-                >VIEW PAGE</a
+              >
+                <i class="fa-regular fa-eye"></i>
+                Go!</a
               >
             </div>
             <div class="projects__item">
@@ -133,8 +137,10 @@
                 class="btn"
                 href="https://codepen.io/axell2552/full/RwgNqKB"
                 target="_blank"
-                >VIEW PAGE</a
               >
+                <i class="fa-regular fa-eye"></i>
+                Go!
+              </a>
             </div>
             <div class="projects__item">
               <h3 class="projects__item-title">Js Documentation</h3>
@@ -147,8 +153,10 @@
                 class="btn"
                 href="https://codepen.io/axell2552/full/oNwjgKR"
                 target="_blank"
-                >VIEW PAGE</a
               >
+                <i class="fa-regular fa-eye"></i>
+                Go!
+              </a>
             </div>
           </div>
         </section>
@@ -168,14 +176,11 @@
             >
             <a
               class="contact__link btn"
-              href="mailto:axellsolisrubio@gmail.com"
+              target="_blank"
+              href="https://www.linkedin.com/in/axell2552"
             >
-              <i class="fas fa-envelope-square"></i>
-              Send a mail</a
-            >
-            <a class="contact__link btn" href="tel:5542771463">
-              <i class="fas fa-phone-square"></i>
-              Call me</a
+              <i class="fa-brands fa-linkedin"></i>
+              LinkedIn</a
             >
           </div>
         </section>
